# IotCooling

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  GlobalWebServerData.h  WebServer.cpp  WebServer.h  cgi.cpp  cgi.h  hardwaretimer.cpp  hardwaretimer.h  lwipopts.h  main.cpp  my_fsdata.c  one_wire.cpp  one_wire.h  settings.h  ssi.cpp  ssi.h  task_FanControl.cpp  task_FanControl.h  task_ReadTemperature.cpp  task_ReadTemperature.h  task_WebServer.cpp  task_WebServer.h  taskshared.h  temperature.h
src/fs/: cgi.html  index.html  index.shtml  ssi.shtml  ssi_cgi.shtml
